# budget_buddy

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: calculator.rs  main.rs
terraform/: iam.tf  main.tf  state.tf
