[package]
name = "budget_buddy"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = {version = "0.4.33", features = ["serde"]}
lambda_http = "0.9.2"
lambda_runtime = "0.9.1"
serde = "1.0.196"
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4.3"